# src/models/dtos/WorkoutExFindDTO.ts
@@ -1,9 +1,0 @@
-export class WorkoutExFindDTO {
-    workoutId: number;
-    exerciseId: number;
-
-    constructor(workoutId: number, exerciseId:number) {
-        this.exerciseId = exerciseId;
-        this.workoutId = workoutId;
-    }
-}
